--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/three": "^0.168.0",
     "genkit-cli": "^1.6.1",
     "postcss": "^8",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
